force-app/main/default/objects/SIOC__Financial_Account_Information__c/SIOC__Financial_Account_Information__c.object-meta.xml
<CustomObject>
    <description>The Financial Account Information object stores the account information.</description>
    <label>Financial Account Information</label>
    <nameField>
        <displayFormat>FAI-{00000000}</displayFormat>
        <label>Financial Account Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Accounts Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>