force-app/main/default/objects/SIOC__Financial_Account_Information__c/fields/SIOC__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account_Name__c</fullName>
    <description>The system automatically populates this text field with the name of the account.</description>
    <inlineHelpText>The system-populated field displays the name of the account.</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>