force-app/main/default/objects/SIOC__Financial_Account_Information__c/fields/SIOC__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>The system automatically populates this text field with the account number for the account.</description>
    <inlineHelpText>The system-populated field displays the account number for the account.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>