force-app/main/default/objects/SIOC__Financial_Account_Information__c/fields/SIOC__Account_Number_Truncated__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account_Number_Truncated__c</fullName>
    <description>The system automatically populates this text field with a truncated, or shortened, version of the account number.</description>
    <inlineHelpText>This system-populated field displays the truncated account number.</inlineHelpText>
    <label>Account Number Truncated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>