force-app/main/default/objects/SIOC__Financial_Account_Information__c/fields/SIOC__Account_Secondary_Type__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account_Secondary_Type__c</fullName>
    <description>The system automatically populates this text field to enter a specific descriptor for an account.</description>
    <inlineHelpText>The system-populated field displays the secondary type for the account.</inlineHelpText>
    <label>Account Secondary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>