force-app/main/default/objects/SIOC__Financial_Account_Information__c/fields/SIOC__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account_Type__c</fullName>
    <description>The system automatically populates this text field to indicate the type of the account.</description>
    <inlineHelpText>The system-populated field displays the type of the account.</inlineHelpText>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>